--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/zeit/hyper-news#readme",
   "dependencies": {
+    "got": "6.7.1",
     "micro": "latest",
+    "ms": "0.7.2",
     "semver": "5.3.0"
   },
   "devDependencies": {
-    "xo": "^0.17.1"
+    "xo": "0.17.1"
   },
   "xo": {
     "space": true,
